# bitcoin-mock-rpc

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/:  build_and_test.yml  build.yml  code_check.yml  tests.yml
src/: client.rs  common.rs  config.rs  lib.rs  main.rs  utils.rs
src/client/: mod.rs  rpc_api.rs
src/ledger/: address.rs  block.rs  errors.rs  macros.rs  mod.rs  script.rs  spending_requirements.rs  transactions.rs  utxo.rs
src/rpc/: mod.rs  server.rs  traits.rs
src/rpc/adapter/: blockchain.rs  generating.rs  mod.rs  rawtransactions.rs  wallet.rs
src/rpc_adapter/: blockchain.rs  generating.rs  mod.rs  wallet.rs
src/test_common/: common.rs  config.rs  mod.rs
tests/: address.rs  block.rs  example.rs  json_rpc_call.py  raw_transactions.rs  rpc.rs  transaction.rs
tests/common/: mod.rs
tests/helpers/: generate_blocks.py
