[package]
name = "bitcoin-mock-rpc"
version = "0.0.6"
edition = "2021"

[dependencies]
bitcoin = "0.32.2"
secp256k1 = "0.29.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.108"
bitcoincore-rpc = "0.19.0"
thiserror = "1.0.61"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
rs_merkle = "1.4"
jsonrpsee = { version = "0.24.2", features = ["server", "client", "macros"], default-features = false }
tokio = { version = "1.38.0", features = ["full"]}
tracing = "0.1.40"
tower = "0.4.13"
