[package]
name = "bitcoin-mock-rpc"
version = "0.0.7"
edition = "2021"

[dependencies]
bitcoin = "0.32.2"
secp256k1 = "0.29.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0.125"
bitcoincore-rpc = "0.19.0"
thiserror = "1.0.63"
bitcoin-scriptexec = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/rust-bitcoin-scriptexec" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rs_merkle = "1.4"
jsonrpsee = { version = "0.24.3", features = ["server", "client", "macros"], default-features = false }
tokio = { version = "1.39.3", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
